--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_navbar-mobile.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_navbar-mobile.scss
@@ -214,8 +214,7 @@
   .nav-link-grouped,
   .nav-link-nongrouped, .home-nav-link {
     color: $off-white;
-    line-height: 3.1em;
-    padding: 0.5em;
+    padding: 1em;
   }
 }
 
